Fix spacing throughout

--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,6 @@
 html {
   background-color: #c9b5ab;
-  line-height: 1.5rem;
+  line-height: 1.5;
   font-weight: normal;
 }
 
@@ -8,10 +8,19 @@ h1 {
   font-size: 1.5rem;
   color: #3f1622;
   font-family: "PT Sans", sans-serif;
+  font-weight: bold;
 }
 
 nav a {
   text-decoration: none;
+}
+
+nav ol {
+  list-style: none;
+}
+
+figcaption {
+  font-style: italic;
 }
 
 a {
@@ -20,6 +29,7 @@ a {
   font-family: "PT Sans", sans-serif;
   font-weight: bold;
   text-decoration: none;
+  font-size: 1.125rem;
 }
 
 a:hover {
@@ -39,7 +49,7 @@ p {
 }
 
 header {
-  line-height: 1.5rem;
+  line-height: 1.;
 }
 
 img {
@@ -50,7 +60,7 @@ blockquote {
   font-family: "PT Serif", serif;
   font-style: italic;
   font-size: 1.5rem;
-  line-height: 1.5rem;
+  line-height: 1.5;
 }
 
 footer a {
